--- a/Task 1,2,3/Source Code/app/src/main/AndroidManifest.xml
+++ b/Task 1,2,3/Source Code/app/src/main/AndroidManifest.xml
@@ -9,15 +9,24 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Task1_ISA">
-        <activity android:name=".page3"></activity>
-        <activity android:name=".page2" />
-        <activity android:name=".MainActivity">
+        <activity android:name=".Splashscreen"
+            android:theme="@style/Splashscreentheme"
+            >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+
+        <activity android:name=".To_be_designed" />
+        <activity android:name=".Profile1" />
+        <activity android:name=".page3" />
+        <activity android:name=".page2" />
+        <activity android:name=".MainActivity"/>
+
+
     </application>
 
 </manifest>
